--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="src/output.css" />
   </head>
   <body class="relative">
     <header class="w-full h-auto pt-1 sm:flex hidden justify-center">
@@ -15,7 +15,7 @@
             <li>
               <img
                 class="lg:w-[50px] w-[40px]"
-                src="/assets/etec.PNG"
+                src="assets/etec.PNG"
                 alt="" />
             </li>
             <li>
